--- a/package.json
+++ b/package.json
@@ -1,16 +1,30 @@
 {
-  "name": "ploomper",
+  "name": "piper",
   "version": "0.1.0",
   "repository": "https://github.com/eduelias/ploomper",
   "description": "It's a pipe manager",
   "main": "dist/index.js",
   "scripts": {
-    "gb" : "barrelsby --directory src --delete --location branch",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "gb": "barrelsby --directory src --delete --location branch",
+    "test": "jest"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "ts",
+      "js"
+    ],
+    "transform": {
+      "\\.(ts|tsx)$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    },
+    "testRegex": "/__tests__/.*\\.(ts|tsx|js)$"
   },
   "author": "Eduardo Elias Saleh",
   "license": "MIT",
   "devDependencies": {
-    "barrelsby": "^1.0.2"
+    "@types/jest": "^23.3.12",
+    "barrelsby": "^1.0.2",
+    "jest": "^23.6.0",
+    "ts-jest": "^23.10.5",
+    "typescript": "^3.2.2"
   }
 }
