--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,3 +1,5 @@
+repo_name: eduelias/tspiper
+
 # Project Information
 team:
   name: Eduardo Elias Myself
@@ -8,17 +10,17 @@ project:
   description: A Typescript event execution pipeline
 
 # Ties to other projects
-ties:
-  dependencies:
-    - name: service-1
-      repo: https://github.com/octokit/octokit.js
-    - name: service-2
-      web: https://pynative.com/python-yaml/
-  consumers:
-    - name: client-1
-      repo: https://github.com/PyGithub/PyGithub
+dependencies:
+  - name: service-1
+    repo: https://github.com/octokit/octokit.js
+  - name: service-2
+    web: https://pynative.com/python-yaml/
+consumers:
+  - name: client-1
+    repo: https://github.com/PyGithub/PyGithub
 
 management: 
+  # https://c4model.com/
   c4m: path/to/C4_model.md
   devops_checklist: path/to/my_devops_checklist.xlsx
 
